--- a/Home/home.css
+++ b/Home/home.css
@@ -775,6 +775,112 @@ h5{
   background: pink;
 }
 
+/* footer section  */
+
+.footer_section{
+  width: 100%;
+  height: 500px;
+  background-color: white;
+}
+.container1{
+  width: 1400px;
+  height: 100%;
+  margin: 0 auto;
+}
+.row{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.first{
+  width: 452px;
+  height: 416px;
+}
+.second{
+  position: relative;
+  top: 80px;
+  display: flex;
+  justify-content: space-between;
+  width: 600px;
+  height: 416px;
+}
+.rasm{
+  margin-bottom: 30px;
+}
+.first h1{
+  font-family: Poppins;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 58px;
+  margin-bottom: 40px;
+}
+.first h4{
+  font-family: Poppins;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 36px;
+  margin-bottom: 28px;
+}
+.first p{
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 28px;
+}
+.first h5{
+  margin-top: 30px;
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 20px;
+}
+.second div p{
+  margin-bottom: 10px;
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 20px;
+}
+.third{
+  width: 100%;
+  height: 80px;
+  background: #FFE6D2;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.third img{
+  position: relative;
+  left: 80px;
+}
+.third p{
+  position: relative;
+  left: 60px;
+  font-weight: 600;
+}
+.over_1{
+  width: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.over_2{
+  width: 300px;
+  height: 80px;
+  display: flex;
+  align-items: center;
+}
+.over_2 div{
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
 
 
 @media screen and (max-width: 900px) {
@@ -952,6 +1058,27 @@ h5{
     gap: 32px 40px !important;
     justify-content: center !important;
   }
+
+  /* footer section  */
+
+
+  .footer_section{
+    width: 100%;
+    height: auto;
+    flex-wrap: wrap;
+}
+.container{
+    max-width: 100%;
+    height: auto;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.first{
+    width: 80%;
+    flex-wrap: wrap;
+    justify-content: center;
+    font-size:20px ;
+}
 }
 
 @media  (max-width: 600px) {
